--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador en Rijksmuseum Art Gallery </title>
+    <title>Buscador Rijksmuseum Art Gallery </title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Rijksmuseum Art Gallery</h1>
-    <form id="search-form">
-        <input type="text" id="search-input" placeholder="Buscar por artista, título o técnica">
-        <button type="submit">Buscar</button>
-    </form>
-    <div id="gallery"></div>
+    <div class="container">
+        <h1>Buscador dentro de Rijksmuseum Art Gallery</h1>
+        <form id="search-form">
+            <input type="text" id="search-input" placeholder="Nombre de artista o título de su obra">
+            <button type="submit">Buscar</button>   
+        </form>
+        <div id="gallery"></div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
