--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador Rijksmuseum Art Gallery </title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
+
 <body>
     <div class="container">
         <h1>Buscador dentro de Rijksmuseum Art Gallery</h1>
@@ -14,8 +18,13 @@
             <input type="text" id="search-input" placeholder="Nombre de artista o título de su obra">
             <button type="submit">Buscar</button>   
         </form>
+    
         <div id="gallery"></div>
+
+        <div id="chartContainer"></div>
+
     </div>
     <script src="js/main.js"></script>
 </body>
+
 </html>
